# fastyr_ai_pipeline

./: .env.test  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  sample.env  setup.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 3b16488f135c_initial_migration.py  8c4e7e0a1f26_add_user_model.py
docs/: usage_examples.py
docs/api/: .gitkeep
helm/fastyr/: Chart.yaml  values.yaml
k8s/base/: deployment.yaml
src/fastyr/api/auth/: auth.py
src/fastyr/api/controllers/: auth_controller.py  health_controller.py  pipeline_controller.py
src/fastyr/api/dependencies/: auth.py
src/fastyr/api/docs/: pipeline.py
src/fastyr/api/middlewares/: error_handler.py  main.py  rate_limit.py  security.py
src/fastyr/core/: exceptions.py
src/fastyr/core/contracts/: request_dtos.py
src/fastyr/core/di/: container.py
src/fastyr/core/logging/: config.py
src/fastyr/core/monitoring/: metrics.py  sentry.py
src/fastyr/domain/entities/: .gitkeep
src/fastyr/domain/models/: audio_process.py  base.py  user.py
src/fastyr/infrastructure/database/: connection.py
storage/: .gitkeep
tests/: conftest.py
tests/api/: conftest.py  test_health.py
tests/api/storage/: .gitkeep
tests/e2e/: test_pipeline_e2e.py
tests/integration/: conftest.py  test_complete_pipeline.py  test_graphql_integration.py  test_pipeline_flow.py  test_pipeline_integration.py
tests/integration/storage/: .gitkeep
tests/unit/: test_pipeline_service.py  test_providers.py  test_repositories.py
(+16 files in other folders)
