[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: mark as integration test",
    "e2e: mark as end-to-end test"
]
python_files = ["test_*.py"]
testpaths = ["tests"]
pythonpath = [
    "src"
]